fix: update benchmark script command and adjust item height in virtual scroller

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "benchmark": "tsx puppeteer-benchmark.ts"
+    "benchmark": "node puppeteer-benchmark.js"
   },
   "dependencies": {
     "puppeteer": "^23.1.0"
